--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@danielkalen/mochawesome-report-generator",
-  "version": "2.2.2",
+  "version": "2.2.3",
   "description": "Generates gorgeous HTML reports from mochawesome reporter.",
   "scripts": {
+    "prepublishOnly": "npm run build",
     "lint": "eslint bin/src lib/src src/js src test --ext js,jsx",
     "stylelint": "stylelint src/**/*.css src/components/**/*.css",
     "test": "cross-env UV_THREADPOOL_SIZE=100 BABEL_DISABLE_CACHE=1 NODE_ENV=test nyc mocha --require test/helper.js \"test/spec/**/*.test.+\\(js\\|jsx\\)\"",
