--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "lines": 95
   },
   "dependencies": {
+    "ansi-to-html": "^0.6.3",
     "chalk": "^1.1.3",
     "dateformat": "^2.0.0",
     "fs-extra": "^3.0.0",
